TATB - 39 [BUG]: Wrap Dialog Data into one config object for more readability (#46)
* - TATB 39
    - for wraping dialog data into one config object changed the modal component ts file.
    - in modal component html file use that object .
    - and the modal is opening in signout which is in header component and skip button which is in quiz component so changed this two components.
    - add one object signoutModal in dialogData.json file.

* - TATB 39
     - removed ?.length from the login component ts file.
     - removed import of dilogData.json from dialog service
     - updated modal component html file.

* - TATB 39
    - removed inline css and give the extenal css
    - added the userId in the login component ts file
    - removed unnecassary line space and comma from the dialog service ts file
    - formated the code in modal component html file and also removed commented code.

* - TATB 39
    - Removed extra comma from the login and header component ts file and also change the function name for opening dialog modal in header component ts file.
    - change the class name in header component scss file.
    - make change in dialogData.json file

--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -1,8 +1,12 @@
-* {
-  font-family: Roboto;
-}
-
-.application {
+.header_left_txt {
   border-bottom: 3px solid green;
   font-size: 15px;
+}
+.image {
+  width: 35px;
+  height: 35px;
+}
+.dropdownInfo {
+  min-width: auto;
+  border: none;
 }
