--- a/src/app/dialog-service/modal/modal/modal.component.scss
+++ b/src/app/dialog-service/modal/modal/modal.component.scss
@@ -1,5 +1,5 @@
 $btn-danger:#FF0000;
-$btn-success:#00FF00;
+$btn-success:#00ad00;
 .confirmation-box{
     width:fit-content;
     position: absolute; 
